# alphagenome_variant_effects

./: .gitignore  MODEL_ARTIFACTS.md  README.md  commands.sh  feature_extractor.py  job_submit.sbatch  pyproject.toml  requirements.txt  test.py  toy_alt.fa  toy_ref.fa  xgboost_make_predictions.py  xgboost_train_and_test.py
ag_variant_effects/: cli.py  predictions.py  scoring.py
examples/: input.tsv
scripts/: download_hf_without_python_hf.sh  run_mock_example.sh
src/ag_variant_effects/: __init__.py  archive.py  backends.py  io_utils.py  sequence.py
